# Stockfish

./: .gitignore  CMakeLists.txt
src/: bitboard.cpp  bitboard.h  endgame.cpp  material.cpp  movegen.cpp  position.cpp  position.h  search.cpp  types.h  uci.cpp  uci.h  ucioption.cpp
